add class .table--items-middle

--- a/resources/sass/components/extra/_table.scss
+++ b/resources/sass/components/extra/_table.scss
@@ -37,6 +37,12 @@
             padding: 5px 0.75rem;
         }
     }
+
+    &--items-middle {
+        td, th {
+            vertical-align: middle;
+        }
+    }
 }
 
 .table-support-preview {
